testing node gphoto2

--- a/public/home.html
+++ b/public/home.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Document</h1>
+    <button onclick="takePicture()">Take picture</button>
     <script src="./script.js"></script>
 </body>
 
