--- a/public/home.html
+++ b/public/home.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Document</h1>
-    <button onclick="takePicture()">Take picture</button>
+    <button onclick="takepicture()">Take picture</button>
     <script src="./script.js"></script>
 </body>
 
