--- a/public/home.html
+++ b/public/home.html
@@ -13,6 +13,12 @@
     <h1>Document</h1>
     <video autoplay="true" id="videoElement">
     </video>
+    <button onclick="setFocus(this.innerText)">Near 3</button>
+    <button onclick="setFocus(this.innerText)">Near 2 </button>
+    <button onclick="setFocus(this.innerText)">Near 1</button>
+    <button onclick="setFocus(this.innerText)">Far 1</button>
+    <button onclick="setFocus(this.innerText)">Far 2</button>
+    <button onclick="setFocus(this.innerText)">Far 3</button>
     <button onclick="takepicture()">Take picture</button>
     <script src="./script.js"></script>
 </body>
