fixing little things

--- a/public/home.html
+++ b/public/home.html
@@ -29,7 +29,7 @@
                 <button onclick="setFocus(this.innerText)">Far 1</button>
                 <button onclick="setFocus(this.innerText)">Far 2</button>
                 <button onclick="setFocus(this.innerText)">Far 3</button>
-                <button onclick="takepicture()">Take picture</button>
+                <button id=takepic onclick="takepicture()">Take picture</button>
             </div>
         </div>
 
