fixing little things

--- a/public/home.html
+++ b/public/home.html
@@ -18,18 +18,20 @@
         <div class="col" style="padding: 0%; padding-left: 1em;">
             <div class="rowbutton">
                 <button class=btn id="liveView">liveView</button>
-                <button class=btn id=setFocus>SetFocus</button>
+                <button class=btn id=setupFocus>setupFocus</button>
                 <button class=btn id=showPictures>Show pictures</button>
             </div>
 
             <div class="focusSetters hidden">
-                <button onclick="setFocus(this.innerText)">Near 3</button>
-                <button onclick="setFocus(this.innerText)">Near 2 </button>
-                <button onclick="setFocus(this.innerText)">Near 1</button>
-                <button onclick="setFocus(this.innerText)">Far 1</button>
-                <button onclick="setFocus(this.innerText)">Far 2</button>
-                <button onclick="setFocus(this.innerText)">Far 3</button>
-                <button id=takepic onclick="takepicture()">Take picture</button>
+                <div class="near"></div>
+                <button onclick="setupFocus(this.innerText)">Near 3</button>
+                <button onclick="setupFocus(this.innerText)">Near 2 </button>
+                <button onclick="setupFocus(this.innerText)">Near 1</button>
+                <button onclick="setupFocus(this.innerText)">Far 1</button>
+                <button onclick="setupFocus(this.innerText)">Far 2</button>
+                <button onclick="setupFocus(this.innerText)">Far 3</button>
+                <button onclick="start(3)">Start</button>
+                <!-- <button id=takepic onclick="takepicture()">Take picture</button> -->
             </div>
         </div>
 
